--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,11 @@
     <string name="menu_home">Acceuil</string>
     <string name="menu_gallery">Profil</string>
     <string name="menu_slideshow">Bail</string>
+
+    <string-array name="AvalaibleRooms">
+        <item>5678</item>
+        <item>5582</item>
+        <item>7896</item>
+        <item>8755</item>
+    </string-array>
 </resources>
